@@ -2,6 +2,8 @@
 Cogent 1.2 - 1.3
 ****************
 
+* reconstructAncestralSequences has been deprecated to
+  reconstructAncestralSeqs. It will be removed in version 1.4.
 * added cogent.cluster.nmds, code to perform nonmetric multidimensional
   scaling.  Not as fast as others (e.g.: R, MASS package, isoMDS)
 
